testing index in controller: OK

--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -34,7 +34,7 @@
     <td th:text="*{id}"></td>
     <td th:text="*{title}"></td>
     <td th:text="*{description}"></td>
-    <td > <img th:src="*{url}"> </td>
+    <td style="max-height: 50px;"> <img th:src="*{url}" > </td>
     <td>
 <!--
       <a th:href="@{|/photos/*{id}|}">Detail</a>
