--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -12,45 +12,62 @@
 <body>
 <header th:replace="~{fragments/navbar :: navbar('photos', ${keyword}, true)}"></header>
 
-<!--<h1>Photos <a th:href="@{/photos/create}" class="btn btn-success " title="add photo" sec:authorize="hasAuthority('ADMIN')">
-  Add New photo
-</a>
-</h1>-->
+<main>
+  <div class="container">
 
-<div th:replace="~{fragments/message :: message}" ></div>
-<table>
-  <thead>
-  <tr>
-    <th>Id</th>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Image</th>
-    <th>Actions</th>
+    <h1>Photos</h1>
 
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:if="${!list.isEmpty()}" th:each="photo : ${list}" th:object="${photo}">
-    <td th:text="*{id}"></td>
-    <td th:text="*{title}"></td>
-    <td th:text="*{description}"></td>
-    <td style="max-height: 50px;"> <img th:src="*{url}" > </td>
-    <td>
+    <a th:href="@{/photos/create}" class="btn btn-success " title="add photo" >
+      <!-- sec:authorize="hasAuthority('ADMIN')" -->
+      <i class="fa-solid fa-plus"></i>
+    </a>
 
-      <a th:href="@{|/photos/*{id}|}">
-        <i class="fa-solid fa-eye"></i>
-      </a>
-  <!--    <a th:href="@{|/photos/edit/*{id}|}" sec:authorize="hasAuthority('ADMIN')">Modify</a>
-      <a th:href="@{|/photos/delete/*{id}|}" sec:authorize="hasAuthority('ADMIN')">Delete</a>
--->
 
-    </td>
+    <div th:replace="~{fragments/message :: message}" ></div>
+    <table>
+      <thead>
+      <tr>
+        <th>Id</th>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Image</th>
+        <th>Actions</th>
 
-  </tr>
-  <tr th:if="${list.isEmpty()}">
-    <td colspan="4">Sorry, there aren't photos available</td>
-  </tr>
-  </tbody>
-</table>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:if="${!list.isEmpty()}" th:each="photo : ${list}" th:object="${photo}">
+        <td th:text="*{id}"></td>
+        <td th:text="*{title}"></td>
+        <td th:text="*{description}"></td>
+        <td style="max-height: 50px;"> <img th:src="*{url}" > </td>
+        <td>
+
+          <a th:href="@{|/photos/*{id}|}">
+            <i class="fa-solid fa-eye"></i>
+          </a>
+          <!--
+                <a th:href="@{|/photos/edit/*{id}|}" sec:authorize="hasAuthority('ADMIN')">
+          -->
+
+          <i class="fa-solid fa-pencil"></i>
+          </a>
+
+          <!--     <a th:href="@{|/photos/delete/*{id}|}" sec:authorize="hasAuthority('ADMIN')">Delete</a>
+         -->
+
+        </td>
+
+      </tr>
+      <tr th:if="${list.isEmpty()}">
+        <td colspan="4">Sorry, there aren't photos available</td>
+      </tr>
+      </tbody>
+    </table>
+
+  </div>
+</main>
+
+
 </body>
 </html>
