--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -18,11 +18,12 @@
             <a class="nav-link" th:href="@{/photos} " th:classAppend="${current == 'photos'} ? active : not-active">My photos</a>
           </li>
 
-<!--          <li class="nav-item">
+         <li class="nav-item">
             <a class="nav-link" th:href="@{/categories}"
-               sec:authorize="hasAuthority('ADMIN')"
                th:classAppend="${current == 'categories'} ? active : not-active">Categories</a>
-          </li>-->
+           <!-- sec:authorize="hasAuthority('ADMIN')"-->
+
+          </li>
 
         </ul>
 
