--- a/src/main/resources/templates/photos/show.html
+++ b/src/main/resources/templates/photos/show.html
@@ -6,7 +6,7 @@
 
   <title>Photo Detail</title>
 </head>
-<body>
+<body class="bg-dark text-light">
 
 <header th:replace="~{fragments/navbar :: navbar('photos', '', false)}"></header>
 
