--- a/src/main/resources/templates/categories/index.html
+++ b/src/main/resources/templates/categories/index.html
@@ -4,7 +4,7 @@
   <th:block th:replace="~{/fragments/link :: link}"></th:block>
   <title>Categories</title>
 </head>
-  <body>
+  <body class="bg-dark text-light">
     <header>
       <th:block th:replace="~{/fragments/navbar :: navbar('photos', '', false)}"></th:block>
     </header>
