--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <th:block th:fragment="navbar(current, keyword, showSearch)">
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
+  <nav class="navbar navbar-expand-lg bg-light" >
+    <div class="container-fluid" >
       <a class="navbar-brand" th:href="@{/}">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -38,9 +38,9 @@
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
 
-        <div class="ms-3">
-          <span sec:authentication="name"></span>
-          <span sec:authentication="authorities"></span>
+        <div class="ms-3" >
+          <span sec:authentication="name" style="color: black;"></span>
+          <span sec:authentication="authorities" style="color: green;"></span>
 
           <a class="btn btn-danger" th:href="@{/logout}">Logout</a>
         </div>
