--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -21,7 +21,11 @@
          <li class="nav-item">
             <a class="nav-link" th:href="@{/categories}"
                th:classAppend="${current == 'categories'} ? active : not-active" sec:authorize="hasAuthority('ADMIN')">Categories</a>
+          </li>
 
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/mailbox}"
+               th:classAppend="${current == 'mailbox'} ? active : not-active" sec:authorize="hasAuthority('ADMIN')">Mailbox</a>
           </li>
 
         </ul>
