--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -18,7 +18,7 @@
 
     <h1>Album
 
-    <a th:href="@{/photos/create}" class="btn btn-success " title="add photo" sec:authorize="hasAuthority('ADMIN')">
+    <a th:href="@{/photos/create}" class="btn btn-success " title="Add new photo" sec:authorize="hasAuthority('ADMIN')">
       <i class="fa-solid fa-plus"></i>
     </a>
 
