--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -38,7 +38,7 @@
         >
 
           <!--colleghiamo il parametro del fragment all'attribute th:value dell'imput che si collegherà al model-->
-          <input name="keyword" th:value="${keyword}" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <input name="keyword" th:value="${keyword}" class="form-control me-2" type="search" placeholder="Search by title" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
 
