add getVisible methods for frontend

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -37,7 +37,7 @@
               th:action="@{/photos}"
         >
 
-          <!--colleghiamo il parametro del fragment all'attribute th:value dell'imput che si collegherà al model-->
+          <!--colleghiamo il parametro del fragment all'attribute th:value dell'input che si collegherà al controller-->
           <input name="keyword" th:value="${keyword}" class="form-control me-2" type="search" placeholder="Search by title" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
